--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -12,6 +12,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker images
       run: |
-        docker login -u metalstack -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        docker login -u majst01 -p ${{ secrets.DOCKER_HUB_TOKEN }}
         docker build -t metalstack/builder
         docker push metalstack/builder
