--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -14,6 +14,7 @@ jobs:
       run: |
         if [ "${{ secrets.DOCKER_HUB_TOKEN }}" != "undefined" -a "${{secrets.DOCKER_HUB_TOKEN }}" != "" ]; then
           docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-          docker build -t metalstack/builder:pr-${{ github.ref }} .
-          docker push metalstack/builder:pr-${{ github.ref }}
+          # pull request images are prefixed with 'pr' to prevent them from overriding released images
+          docker build -t metalstack/builder:pr-${GITHUB_HEAD_REF##*/} .
+          docker push metalstack/builder:pr-${GITHUB_HEAD_REF##*/}
         fi
