--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,6 @@ jobs:
       run: |
         if [ "${{ secrets.DOCKER_HUB_TOKEN }}" != "undefined" -a "${{secrets.DOCKER_HUB_TOKEN }}" != "" ]; then
           docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-          docker build -t metalstack/builder:${{ github.ref }} .
-          docker push metalstack/builder:${{ github.ref }}
+          docker build -t metalstack/builder:${GITHUB_HEAD_REF##*/} .
+          docker push metalstack/builder:${GITHUB_HEAD_REF##*/}
         fi
