--- a/Makefile.inc
+++ b/Makefile.inc
@@ -17,6 +17,12 @@ arch = $(word 2, $(temp))
 export GO111MODULE := on
 export CGO_ENABLED
 
+ifeq ($(CI),true)
+  DOCKER_TTY_ARG=""
+else
+  DOCKER_TTY_ARG=t
+endif
+
 ifeq ($(CGO_ENABLED),1)
 	LINKMODE := -linkmode external -extldflags '-static -s -w'
 endif
@@ -86,7 +92,7 @@ test-integration:
 .PHONY: swaggergenerate
 swaggergenerate:
 	echo $(SWAGGERSPEC)
-	GO111MODULE=off docker run -it --user $$(id -u):$$(id -g) --rm -v ${PWD}:/work metalstack/builder swagger generate client -f $(SWAGGERSPEC) -t $(SWAGGERTARGET) --skip-validation
+	GO111MODULE=off docker run -i$(DOCKER_TTY_ARG) --user $$(id -u):$$(id -g) --rm -v ${PWD}:/work metalstack/builder swagger generate client -f $(SWAGGERSPEC) -t $(SWAGGERTARGET) --skip-validation
 
 # Static code analysis
 .PHONY: check
