Install docker-make from release, more swagger building tweaks, update go to 1.14.8 and golangci to 1.31

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -89,8 +89,11 @@ swaggergenerate:
 ifeq ($(CI),true)
 	echo "running swagger directly because in CI"
 	GO111MODULE=off swagger generate client -f $(SWAGGERSPEC) -t $(SWAGGERTARGET) --skip-validation
+else ifeq ($(IN_BUILDER),true)
+	echo "running swagger directly because in Builder"
+	GO111MODULE=off swagger generate client -f $(SWAGGERSPEC) -t $(SWAGGERTARGET) --skip-validation
 else
-	echo "running swagger from builder because not in CI"
+	echo "running swagger from builder because not in CI or Builder"
 	GO111MODULE=off docker run -it --user $$(id -u):$$(id -g) --rm -v ${PWD}:/work metalstack/builder swagger generate client -f $(SWAGGERSPEC) -t $(SWAGGERTARGET) --skip-validation
 endif
 
