--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -9,13 +9,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
     - name: Build the latest Docker image
       run: |
-        docker build -t metalstack/builder .
+        docker build -t metalstack/builder -t ghcr.io/metal-stack/builder .
+
     - name: Push the latest image
       run: |
-        if [ "${{ secrets.DOCKER_HUB_TOKEN }}" != "undefined" -a "${{secrets.DOCKER_HUB_TOKEN }}" != "" ]; then
-          docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-          docker push metalstack/builder
-        fi
+        docker push metalstack/builder
+        docker push ghcr.io/metal-stack/builder
