--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,11 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
     - name: Build and push the released Docker images
       run: |
-        if [ "${{ secrets.DOCKER_HUB_TOKEN }}" != "undefined" -a "${{secrets.DOCKER_HUB_TOKEN }}" != "" ]; then
-          docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-          docker build -t metalstack/builder:${{ github.ref }} .
-          docker push metalstack/builder:${{ github.ref }}
-        fi
+        docker build -t metalstack/builder:${{ github.ref }} -t ghcr.io/metal-stack/builder:${{ github.ref }} .
+        docker push metalstack/builder:${{ github.ref }}
+        docker push ghcr.io/metal-stack/builder:${{ github.ref }}
